examples/test/testpolicy11399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11399
  namespace: namespace209
spec:
  podSelector:
    matchLabels:
      key16: value46
      key17: value39
      key21: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value31
          key3: value46
      podSelector:
        matchLabels:
          key28: value18
          key39: value11
          key11: value6
